--- a/src/styles/template.module.css
+++ b/src/styles/template.module.css
@@ -2,9 +2,8 @@
   width: 350px;
   height: 450px;
   background-color: #fafafa;
+  border: 1px solid #222222;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  border-radius: 15px;
 }
