--- a/src/styles/Head.module.css
+++ b/src/styles/Head.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  z-index: 2;
 }
 
 .top {
@@ -16,7 +17,9 @@
 .bottom {
   display: flex;
   justify-content: space-evenly;
-  background-color: #f2f2f2;
+  background-color: #e49b5a;
+  border-top: 1px solid #222;
+  padding: 8px 0;
 }
 
 .bottom button {
