--- a/src/styles/Item.module.css
+++ b/src/styles/Item.module.css
@@ -1,5 +1,12 @@
 .item {
-  padding: 8px;
+  padding: 10px 16px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #222;
+}
+
+.item label {
+  margin-left: 8px;
 }
 
 .item p {
