--- a/src/styles/template.module.css
+++ b/src/styles/template.module.css
@@ -1,9 +1,24 @@
 .template {
   width: 350px;
   height: 450px;
-  background-color: #fafafa;
+  background-color: #e9d9af;
+  position: relative;
   border: 1px solid #222222;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+}
+
+.template:before {
+  content: "";
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  filter: opacity(0.5);
+  background: url(/public/blackline.png) no-repeat;
+  background-position: center;
+  background-size: 138%;
+  z-index: 1;
 }
