--- a/src/styles/Create.module.css
+++ b/src/styles/Create.module.css
@@ -3,6 +3,11 @@
   z-index: 2;
 }
 
+.wrapper form {
+  width: 100%;
+  display: flex;
+}
+
 .wrapper input {
   flex: 1;
   border-top: 1px solid #222;
