--- a/src/styles/Head.module.css
+++ b/src/styles/Head.module.css
@@ -19,6 +19,7 @@
 .bottom {
   display: flex;
   justify-content: space-evenly;
+  transition: all 0.3s;
   background-color: #e49b5a;
   border-top: 1px solid #222;
   padding: 8px 0;
