--- a/src/styles/template.module.css
+++ b/src/styles/template.module.css
@@ -2,6 +2,7 @@
   width: 350px;
   height: 450px;
   background-color: #e9d9af;
+  transition: all 0.3s;
   position: relative;
   border: 1px solid #222222;
   margin: 0 auto;
