--- a/src/styles/Head.module.css
+++ b/src/styles/Head.module.css
@@ -17,8 +17,6 @@
 }
 
 .bottom {
-  display: flex;
-  justify-content: space-evenly;
   transition: all 0.3s;
   background-color: #e49b5a;
   border-top: 1px solid #222;
@@ -28,6 +26,7 @@
 .bottom button {
   font-family: "Poppins";
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .mode {
