--- a/src/index.css
+++ b/src/index.css
@@ -116,8 +116,8 @@ body {
   flex-direction: column;
   justify-content: center;
   height: 100vh;
-  background: url(../public/clouds.png), no-repeat, center;
-  background-size: contain;
+  background: url(../public/clouds.png) no-repeat center;
+  background-size: cover;
   backdrop-filter: sepia(0.1);
 }
 ol,
