--- a/src/styles/Item.module.css
+++ b/src/styles/Item.module.css
@@ -8,9 +8,6 @@
 .item:hover .delete svg {
   opacity: 1;
 }
-.item input {
-  cursor: pointer;
-}
 
 .item p {
   font-size: 15px;
@@ -21,4 +18,36 @@
   cursor: pointer;
   opacity: 0;
   transition: all 0.2s;
+}
+
+.item input[type="checkbox"] {
+  cursor: pointer;
+  display: none;
+  position: relative;
+}
+
+.item input[type="checkbox"] + label {
+  position: relative;
+  display: inline-block;
+  padding-left: 25px;
+  cursor: pointer;
+}
+.item input[type="checkbox"] + label:before {
+  content: "";
+  width: 13px;
+  height: 13px;
+  position: absolute;
+  top: 2px;
+  left: 0;
+  background-color: #f2f2f2;
+}
+
+.item input[type="checkbox"]:checked + label:after {
+  content: "";
+  width: 13px;
+  height: 13px;
+  position: absolute;
+  top: 2px;
+  left: 0px;
+  background-color: #e49b5a;
 }
